# Anwaar-Portfolio

./: .gitignore  .vercelignore  PersonalChatBot.py  README.md  index.html  main.py  prompts.py  pyproject.toml  requirements.txt
static/: portfolio.html
