[project]
name = "anwaar-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]
